fixed social links label on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   font-family: var(--ff-primary);
   scroll-behavior: smooth;
   background-color: var(--clr-100);
+  -webkit-tap-highlight-color: transparent;
 }
 
 *,
@@ -76,8 +77,6 @@ body {
 .stt-btn-exit {
   transform: translateX(150%);
   transition: transform 300ms ease-in;
-}
-.stt-btn-enter-exit-active {
 }
 
 @media (min-width: 2560px) {
